--- a/blocks/profile/__sub-title/profile__sub-title.css
+++ b/blocks/profile/__sub-title/profile__sub-title.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  text-overflow: clip;
+  text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
 }
