--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,8 +1,7 @@
 .popup__button {
   border: 0;
-  padding: 0;
+  padding: 14px 124px 14px 125px;
   width: 100%;
-  height: 50px;
   background-color: #000000;
   border-radius: 2px;
   font-weight: 400;
@@ -18,7 +17,7 @@
 
 @media (max-width: 510px) {
   .popup__button {
-    height: 46px;
+    padding: 14px 82px 15px;
     font-size: 14px;
     line-height: 17px;
   }
