--- a/blocks/root/__header/root__header.css
+++ b/blocks/root/__header/root__header.css
@@ -1,13 +1,13 @@
 .root__header {
   width: 100%;
-  height: 74px;
+  padding-bottom: 39px;
   margin-top: 45px;
   margin-bottom: 40px;
 }
 
 @media (max-width:619px) {
   .root__header {
-    height: 56px;
+    padding-bottom: 27px;
     margin-top: 28px;
     margin-bottom: 42px;
     width: calc(100% + 2 * 19px);
