--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -5,6 +5,8 @@
   width: 32px;
   height: 32px;
   cursor: pointer;
+  background: center no-repeat url(../../../images/popup_close.svg);
+  background-size: 32px 32px;
 }
 
 @media (max-width: 510px) {
@@ -13,5 +15,6 @@
     right: 0px;
     width: 20px;
     height: 20px;
+    background-size: 20px 20px;
   }
 }
