--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   border: 2px solid #ffffff;
   border-radius: 2px;
-  background: center no-repeat url(../../../images/add-btn.png) #000000;
+  background: center no-repeat url(../../../images/add-btn.svg) #000000;
   background-size: 22px 22px;
   margin-left: auto;
 }
