--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -4,7 +4,7 @@
   height: 24px;
   border: 1px solid #ffffff;
   box-sizing: border-box;
-  background: center no-repeat url(../../../images/edit-btn.png) #000000;
+  background: center no-repeat url(../../../images/edit-btn.svg) #000000;
   background-size: 10px 10px;
 }
 
