--- a/pages/index.css
+++ b/pages/index.css
@@ -24,6 +24,7 @@
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__block/element__block.css);
 @import url(../blocks/element/__icon/element__icon.css);
+@import url(../blocks/element/__icon/_active/element__icon_active.css);
 @import url(../blocks/element/__img/element__img.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/footer/__text/footer__text.css);
