--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -12,11 +12,11 @@
   margin-left: auto;
 }
 
-@media (max-width: 619px) {
+@media (max-width: 730px) {
   .profile__add-btn {
     margin-left: 0;
     margin-top: 7px;
-    width: 100%;
+    width: 282px;
     height: 50px;
     background-size: 16px 16px;
   }
