--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -7,6 +7,7 @@
   cursor: pointer;
   background: center no-repeat url(../../../images/popup_close.svg);
   background-size: 32px 32px;
+  border: 0;
 }
 
 @media (max-width: 510px) {
