--- a/pages/index.css
+++ b/pages/index.css
@@ -36,4 +36,8 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__status/popup__status.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__big-image/popup__big-image.css);
+@import url(../blocks/popup/__figcaption/popup__figcaption.css);
+@import url(../blocks/popup/__figure/popup__figure.css);
+@import url(../blocks/popup/__image-wrapper/popup__image-wrapper.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
