--- a/blocks/popup/__figcaption/popup__figcaption.css
+++ b/blocks/popup/__figcaption/popup__figcaption.css
@@ -3,4 +3,14 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 15px;
+  max-width: 291px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+@media (max-width: 510px) {
+  .popup__figcaption{
+    max-width: 240px;
+  }
 }
