--- a/blocks/popup/__big-image/popup__big-image.css
+++ b/blocks/popup/__big-image/popup__big-image.css
@@ -2,6 +2,8 @@
   display: block;
   max-width: 75vw;
   max-height: 75vh;
-  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
   object-position: center;
 }
