--- a/pages/index.css
+++ b/pages/index.css
@@ -31,9 +31,11 @@
 @import url(../blocks/footer/__text/footer__text.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(../blocks/popup/__status/popup__status.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__big-image/popup__big-image.css);
@@ -42,3 +44,5 @@
 @import url(../blocks/popup/__image-wrapper/popup__image-wrapper.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/_image/popup_image.css);
+@import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__error/_visible/popup__error_visible.css);
