--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,7 +1,7 @@
 .popup__container {
   position: relative;
   width: 430px;
-  height: 330px;
+  min-height: 346px;
   background-color: #ffffff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
@@ -12,7 +12,7 @@
 @media (max-width: 510px) {
   .popup__container {
     width: 282px;
-    height: 322px;
+    min-height: 336px;
     padding: 25px 22px;
   }
 }
