feat: исправить ошибки по ревью 1 9пр

--- a/src/blocks/profile/__avatar-btn/profile__avatar-btn.css
+++ b/src/blocks/profile/__avatar-btn/profile__avatar-btn.css
@@ -15,3 +15,10 @@
   cursor: pointer;
   opacity: 1;
 }
+
+@media (max-width: 730px) {
+  .profile__avatar-btn {
+    top: 0;
+    left: calc(50% - 60px);
+  }
+}
